--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
-  "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "name": "smart-energy-dependencies",
+  "description": "A hackathon project",
+  "version": "0.0.1",
+  "homepage": "https://github.com/itsbriany/SmartEnergyApp",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -11,5 +11,20 @@
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0"
-  }
+  },
+  "authors": [
+    "Brian Yip <itsbriany@gmail.com>"
+  ],
+  "main": "",
+  "moduleType": [
+    "node"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "app/bower_components",
+    "test",
+    "tests"
+  ]
 }
